# RAG-in-PDF

./: Dockerfile  README.md  app.py  docker-compose.yml  pdf_rag.py  pyproject.toml  requirements.txt
tmp/: memory.db
