[project]
name = "pdf-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.0",
    "google-genai>=1.20.0",
    "openai>=1.86.0",
    "pypdf>=5.6.0",
    "qdrant-client>=1.14.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
]
